--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="Desenvolvedor Front End e UX/UI Designer Localizado no Rio de Janeiro">
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
